add_executable(cfd main.cpp)
target_link_libraries(cfd PRIVATE XAD::xad)
target_include_directories(cfd PRIVATE CODI/include)
target_include_directories(cfd PRIVATE ${CMAKE_BINARY_DIR}/_deps/codi-src/include)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(Common)
add_subdirectory(DualGrid)
add_subdirectory(Geometry)
add_subdirectory(Gradient)
add_subdirectory(IO)
add_subdirectory(Limiters)
add_subdirectory(LinAlg)
add_subdirectory(Numerics)
add_subdirectory(Solver)
